Added components and functionality that handle user entries

--- a/src/assets/css/Nav.css
+++ b/src/assets/css/Nav.css
@@ -12,4 +12,5 @@
     /* adding a background color will hide the background when nav is on top */
     /* background-color: white; */
     border-bottom: 1px solid lightgray;
+    background-color: white;
 }
